<resources>
    <string name="app_name">Hamro Messenger</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Hi there, I\'m using Hamro Messenger</string>
    <string name="title">Welcome to \n Hamro Messenger</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>

    <string name="change_status">CHANGE STATUS</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="login">LOGIN</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="your_email">Your Email</string>
    <string name="this_is_a_avatar_of_user">this is a avatar of user</string>
    <string name="message_text">Message Text</string>
    <string name="time">00:00</string>
    <string name="enter_message">Enter Message...</string>
    <string name="total_friends">Total Friends</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="decline_friend_request">DECLINE FRIEND REQUEST</string>

</resources>
