<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.sudu.chatapp.StartActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="111dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:backgroundTint="@android:color/white"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:background="@drawable/btnback"
        android:text="@string/need_a_new_account"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/start_reg_btn"
        android:layout_alignTop="@+id/textView"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/colorAccent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/btnback"
        android:text="@string/already_have_account"
        android:textColor="@android:color/white" />
</RelativeLayout>
